syntax = "proto3";

option java_multiple_files = true;
option java_package = "iot.temperature.proto";

package iot.temperature;

// Events consumed from external services

message TemperatureRead {
    string sensor_id = 1;
    int32 temperature = 2;
}
